--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script type="application/javascript" src="../js/app.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="wrapper">
         <h1>Second Canvas Game</h1>
-        <p><canvas id="canvas">Canvas is not supported by your browser</canvas></p>
-        <script type="application/javascript" src="../js/app.js"></script>
+        <canvas id="canvas">Canvas is not supported by your browser</canvas>
+        
     </div>
 </body>
 </html>
