Debug git page and canvas

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Second Canvas Game</h1>
-        <canvas id="canvas">Canvas is not supported by your browser</canvas>
+        <p><canvas id="canvas" width="200" height="300" style="border-radius: 10px" style="background:#999">
+            Canvas not supported by your browser.
+        </canvas></p>
         
     </div>
 </body>
