--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script type="application/javascript" src="../js/app.js"></script>
+    
     <title>Document</title>
 </head>
 <body>
     <div class="wrapper">
-        <p><canvas id="canvas" width="200" height="300" style="border-radius: 10px" style="background:#999">
+        <h1>Spaceship</h1>
+        <p><canvas id="canvas"  style="background:#999">
             Canvas not supported by your browser.
         </canvas></p>
         
     </div>
+    <script type="application/javascript" src="js/app.js"></script>
 </body>
 </html>
